# CMSC345Project

./: .gitattributes  .gitignore  FeatureDiscovery.ipynb  FeatureExtraction.py  README.md  hello.txt  main.py  progress_report.qmd  protein_classifier.ipynb  pyproject.toml  requirements.txt  sequences_training.txt  training_dataset.csv
TestAlgos/: GradientBoosting.ipynb  GradientDescent.ipynb  GradientProcess.ipynb  KNN.ipynb  MLP_Pytorch.ipynb  SVM.ipynb
