[project]
name = "cmsc345project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "ifeatureomegacli>=1.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "modlamp>=4.3.2",
    "notebook>=6.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
]
